--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -47,6 +47,7 @@ body.home.page-template-default {
 			font-size: $base__space-unit * 1.5;
 			font-weight: normal;
 			letter-spacing: 4px;
+			margin: $base__space-unit * 2.5 0;
 		}
 	}
 }
