finished adding single taxonomy page.

--- a/themes/inhabitent/sass/_archives.scss
+++ b/themes/inhabitent/sass/_archives.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 /* ------- Product Archive Header ------- */
-body.archive.post-type-archive.post-type-archive-product {
+body.archive {
 
     .page-header {
         margin-top: $base__space-unit * 1.5;
