added search button in header.

--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -35,6 +35,8 @@ $color__button-green-hover: #19625D;
 $color__footer-h3: #d99054;
 $color__footer-h1: #d99054;
 
+$color__pagination-button--current: #808080;
+
 
 // Typography
 
