--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -20,120 +20,6 @@
 		}
 	}
 }
-/* ------- Front Page Styles ------- */
-
-.product-shop.container, .recent-journals.container {
-	margin-bottom: 4.5rem;
-}
-
-/* - Hero Banner - */
-.front-page-hero {
-	background: url("//localhost:3000/inhabitent/wp-content/themes/inhabitent/assets/images/home-hero.jpg") no-repeat center;
-	background-size: cover;
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-/* - Shop Stuff Catagories - */
-body.home.page-template-default {
-	.container {
-		h2 {
-			font-family: 'Novecento';
-			text-transform: uppercase;
-			text-align: center;
-			font-size: $base__space-unit * 1.5;
-			font-weight: normal;
-			letter-spacing: 4px;
-			margin: $base__space-unit * 2.5 0;
-		}
-	}
-}
-.product-shop-stuff {
-	@extend .container-flex;
-
-	.product-block-item {
-		@extend .container-flex;
-		flex-flow: column nowrap;
-		align-items: center;
-		text-align: center;
-		justify-content: space-between;
-		padding: $base__space-unit / 2;
-		width: 23.5%;
-		border: 1px solid $color__background-hr;
-		border-top-width: 5px;
-		margin: 0;
-
-		.entry-readmore.link-button__color-green	{
-			margin: $base__space-unit / 2;
-			border: none;
-
-			a {
-				color: #fff;
-			}
-		}
-
-		&:hover {
-			border-color: $color__footer-h1;
-		}
-
-		p {
-			line-height: 1.75rem;
-		}
-	}
-}
-
-/* - Most Recent Journal Posts - */
-.recent-journals.container {
-	width: 1120px;
-	
-	h3 {
-		letter-spacing: 2px;
-		font-family: 'Novecento';
-		margin: 0;
-		line-height: 1.75rem;
-
-		a {
-			font-size: 1.3rem;
-			text-transform: uppercase;
-			text-decoration: none;
-		}
-	}
-
-	.most-recent-journals {
-		display: flex;
-		flex-flow: row nowrap;
-		justify-content: space-between;
-	}
-
-	.journal-recent-block-item {
-		display: flex;
-		flex-flow: column nowrap;
-		border: 1px solid #d1d1d1;
-		width: 32.5%;
-
-		img {
-			height: 250px;
-			border-bottom: 5px solid #d1d1d1;
-		}
-
-		.entry-wrapper {
-			height: 100%;
-			padding: 0.75rem;
-
-			.entry-meta {
-				font-size: $base__space-unit / 2;
-			}
-		}
-
-		.entry-readmore {
-			width: 40%;
-			margin: 0.75rem;
-		}
-	}
-}
 
 /* ------- About Us Page Styles ------- */
 .page-template-about {
@@ -166,10 +52,14 @@ body.home.page-template-default {
 }
 
 /* ------- Journal Page Styles ------- */
-body.blog, body.archive {
+body.blog, body.archive, body.search {
 
 	.entry-readmore.link-button {
-		width: 170px;
+		width: 165px;
+
+		i {
+			margin-left: 5px;
+		}
 	}
 }
 
@@ -212,89 +102,6 @@ body:not(.tax-product-type):not(.page-template-about):not(.product-template-defa
 	border-right: 1px solid $color__background-hr; 
 }
 
-/* ------- Single Product Type Page ------- */
-body.archive.tax-product-type {
-	.page-header {
-		p {
-			margin-bottom: $base__space-unit * 2;
-            border-bottom: 1px dashed #d1d1d1;
-			padding-bottom: 3rem;
-			text-align: center;
-			font-size: 1rem;
-			line-height: 1.75rem;
-		}
-	}
-}
-
-/* ------- Search Form ------- */
-form[role='search'] {
-	fieldset {
-		border: none;
-		padding: 0;
-		margin: 0;
-	}
-
-	.search-submit {
-		visibility: hidden;
-	}
-
-	input {
-		background: #F4F4F4;
-		border-radius: 0;
-		padding: $base__space-unit / 3;
-	}
-}
-
-/* ------- Search Page ------- */
-body.search {
-	.page-header {
-		padding-bottom: $base__space-unit / 3;
-		border-bottom: 1px solid $color__background-hr;
-		h1 {
-			font-family: 'Novecento';
-			letter-spacing: 2px;
-			font-size: $base__space-unit * 1.5;
-			text-transform: uppercase;
-		}
-	}
-	.site-content h2 {
-		font-family: 'Novecento';
-		letter-spacing: 2px;
-		font-size: $base__space-unit * 1.5;
-		a {
-			@extend .link-reset;
-			text-transform: uppercase;
-		}
-	}
-}
-
-/* ------- 404 Page ------- */
-
-body.error404 {
-	h2 {
-		text-transform: uppercase;
-		font-family: 'Novecento';
-		letter-spacing: 2px;
-	}
-
-	ul {
-		margin: 0;
-		padding: 0;
-
-		li {
-			list-style: none;
-			
-			a {
-				text-decoration: none;
-			}
-		}
-	}
-
-	select {
-		background: #fff;
-		border-radius: 0;
-	}
-}
 
 /* ------- Posts and pages ------- */
 
