--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -28,19 +28,54 @@ a {
 
 .main-navigation {
 	clear: both;
-	display: block;
-	// float: left;
+	display: flex;
 	width: 100%;
+	justify-content: flex-end;
+
+	form {
+		margin-left: $base__space-unit;
+		
+		label {
+			input.search-field {
+				text-transform: uppercase;
+				background: none;
+				border: none;
+				font-family: 'Novecento';
+				outline: none;
+				padding-left: 0;
+				width: 0;
+				visibility: hidden;
+			}
+		}
+	
+		a.search-submit {
+			padding: 0;
+			margin-right: $base__space-unit / 3;
+			display: inline-block;
+			cursor: pointer;
+
+			i {
+				color: $color__link;
+			}
+		}
+
+	}
+	
+.search-expanded {
+	visibility: visible;
+	width: 100px;
+	transition: width 2s ease-in-out;
+}
 
 	ul {
-		display: none;
+		display: inline-block;
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
+		margin-right: $base__space-unit;
 
 		ul {
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-			// float: left;
 			position: absolute;
 			top: $base__space-unit;
 			left: -999rem;
